# cmake_header_generation_sample

./: CMakeLists.txt  README.md  scr.py
scripts/: scr.py
src/: genconfig.h  src1.cpp
